2006-05-17  Michael Natterer  <mitch@gimp.org>

	* app/core/gimp.c (gimp_real_initialize): add a clipboard pattern
	to the pattern factory (forgot to commit this file).

2006-05-17  Manish Singh  <yosh@gimp.org>

	* po-libgimp/Makefile.in.in
	* po-plug-ins/Makefile.in.in
	* po-script-fu/Makefile.in.in
	* po-tips/Makefile.in.in: revert previous changes, it doesn't
	look straightforward to change these without bumping up the
	intltool dependency.

2006-05-17  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpresolutionentry.c: synced function names with
	the header file.

	* libgimpwidgets/gimpwidgets.def: added missing entries.

2005-05-16  Manish Singh  <yosh@gimp.org>

	* po-libgimp/Makefile.in.in
	* po-plug-ins/Makefile.in.in
	* po-script-fu/Makefile.in.in
	* po-tips/Makefile.in.in: synchronized with po/Makefile.in.in.

	* gimptool-2.0.in
	* gimptool-win32.c.in: add reference to datarootdir.

2006-05-16  Michael Natterer  <mitch@gimp.org>

	* app/core/Makefile.am
	* app/core/core-types.h
	* app/core/gimppatternclipboard.[ch]: new GimpPattern subclass
	that auto-updates its contents from gimp->global_buffer.

	* app/core/gimp.c (gimp_real_initialize): add a clipboard pattern
	to the pattern factory.

	* app/widgets/gimpaction.c (gimp_action_set_proxy): replace the
	GimpView by a new one if the viewable type changes, instead of
	running into a warning (didn't happen before because this is only
	used for imagefiles and patterns, which didn't have subclasses).

2006-05-16  Karine Delvare  <edhel@gimp.org>

	* app/tools/gimprectangletool.c: check if the tool has a display
	before using it

2006-05-16  Michael Natterer  <mitch@gimp.org>

	* app/paint-funcs/paint-funcs-generic.h
	* app/paint-funcs/paint-funcs.[ch]: implement copy_color() and
	copy_color_pixels() which copy only the color bytes into a dest
	that has one byte less than src. Renamed component_pixels() to
	copy_component_pixels().

	* app/core/Makefile.am
	* app/core/core-types.h